Add face to home

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,12 +1,12 @@
 <main class="page__main">
-  <nav>
+  <!-- <nav>
     <ul class="main__list">
       <li>Home</li>
       <li>Sobre mí</li>
       <li>Proyectos</li>
       <li>Más</li>
     </ul>
-  </nav>
+  </nav> -->
   <!-- <div class="eye">
     <p class="eye__left">(</p>
     <p class="eye__right">(</p>
@@ -16,6 +16,9 @@
     <p class="eye__right">)</p>
   </div>
   <div>
-    <span>></span>
+    <span class="nose">></span>
+  </div>
+  <div>
+    <span class="mouth">}</span>
   </div>
 </main>
