--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -7,13 +7,15 @@
 .header__title {
   font-family: "Kiwi Maru", serif;
   font-weight: 300;
-  font-size: 50px;
+  font-size: 30px;
   color: white;
   text-align: center;
+  margin-top: 40px;
 }
 .header__subtitle {
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
+  font-size: 17px;
   color: white;
   text-align: center;
 }
