Add menu hamburger

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,36 @@
 <header class="header">
-  <h1 class="header__title">Natalia Migallón</h1>
-  <h2 class="header__subtitle">Programadora web front-end</h2>
+  <div class="header__wrapper">
+    <h1 class="header__title">
+      Natalia Migallón
+      <!-- <h2 class="header__title--sub">Programadora web front-end</h2> -->
+    </h1>
+
+    <div class="hamburger">
+      <div class="_layer -top"></div>
+      <div class="_layer -mid"></div>
+      <div class="_layer -bottom"></div>
+    </div>
+  </div>
+  <nav class="header__nav">
+    <ul>
+      <li>
+        <a class="header__nav--home" href="./home.html" title="home">Home</a>
+      </li>
+      <li>
+        <a class="header__nav--about" href="./home.html" title="Sobre mí"
+          >Sobre mí</a
+        >
+      </li>
+      <li>
+        <a class="header__nav--projects" href="./home.html" title="Proyectos"
+          >Proyectos</a
+        >
+      </li>
+      <li>
+        <a class="header__nav--contact" href="./home.html" title="Contacto"
+          >Contacto</a
+        >
+      </li>
+    </ul>
+  </nav>
 </header>
