Add collapsable eyes

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,12 +1,18 @@
 <main class="page__main">
   <div class="eye">
-    <p class="eye__left">)</p>
-    <p class="eye__right">)</p>
+    <div class="js-collapsed">
+      <p class="eye__left-up js-up">(</p>
+      <p class="about">Sobre mí</p>
+      <p class="eye__left-down js-down">)</p>
+    </div>
+    <div class="js-collapsed">
+      <p class="eye__right-up js-up">(</p>
+      <p class="projects">Proyectos</p>
+      <p class="eye__right-down js-down">)</p>
+    </div>
   </div>
   <div>
     <span class="nose">></span>
   </div>
-  <div>
-    <span class="mouth">}</span>
-  </div>
+  <div class="mouth"><span class="mouth__child">}</span></div>
 </main>
