--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,11 +1,3 @@
-// body {
-//   padding: 2rem;
-//   height: 100vh;
-//   background-image: url('../images/bg-adalab.png');
-//   background-color: $color-bg;
-//   font-family: $font-main;
-// }
-
 body {
   //background-image: linear-gradient(rgb(21, 218, 158), rgb(240, 156, 77));
   background-image: linear-gradient(rgb(21, 218, 208), rgb(226, 175, 128) 60%);
@@ -14,22 +6,64 @@ body {
   height: 100%;
   min-height: 100vh;
 }
+.about {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 18px;
+  color: white;
+}
+.projects {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 18px;
+  color: white;
+}
 .eye {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   text-align: center;
-  //margin-left: 20px;
-  &__left {
+  &__left-down {
     font-size: 100px;
     color: white;
+    margin-top: -30px;
     -webkit-transform: rotate(90deg);
+    cursor: pointer;
   }
-  &__right {
+  &__right-down {
     font-size: 100px;
     color: white;
+    margin-top: -30px;
     -webkit-transform: rotate(90deg);
+    cursor: pointer;
   }
+  &__left-up {
+    font-size: 100px;
+    color: white;
+    margin-top: -30px;
+    -webkit-transform: rotate(90deg);
+    cursor: pointer;
+  }
+  &__right-up {
+    font-size: 100px;
+    color: white;
+    margin-top: -30px;
+    -webkit-transform: rotate(90deg);
+    cursor: pointer;
+  }
+}
+.js-collapsed .js-up {
+  display: none;
+}
+.js-collapsed .about {
+  display: none;
+}
+.js-collapsed .projects {
+  display: none;
 }
 .nose {
   display: flex;
@@ -43,13 +77,22 @@ body {
   -webkit-transform: rotate(90deg);
 }
 .mouth {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   font-size: 100px;
   color: white;
-  //margin-right: 10px;
-  margin-top: 18px;
   -webkit-transform: rotate(90deg);
+  &__child {
+    display: inline-block;
+  }
 }
+// .mouth {
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   font-size: 100px;
+//   color: white;
+//   //margin-right: 10px;
+//   margin-top: 18px;
+//   -webkit-transform: rotate(90deg);
+// }
