Fixed position eyes

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,18 +1,16 @@
 <main class="page__main">
-  <div class="eye">
-    <div class="js-collapsed">
-      <p class="eye__left-up js-up">(</p>
-      <p class="about">Sobre mí</p>
-      <p class="eye__left-down js-down">)</p>
-    </div>
-    <div class="js-collapsed">
-      <p class="eye__right-up js-up">(</p>
-      <p class="projects">Proyectos</p>
-      <p class="eye__right-down js-down">)</p>
-    </div>
+  <div class="eye-wrapper">
+    <section class="eye js-collapsed">
+      <p class="eye__up">(</p>
+      <p class="eye__text">Sobre mí</p>
+      <p class="eye__down js-down">)</p>
+    </section>
+    <section class="eye js-collapsed">
+      <p class="eye__up">(</p>
+      <p class="eye__text">Proyectos</p>
+      <p class="eye__down js-down">)</p>
+    </section>
   </div>
-  <div>
-    <span class="nose">></span>
-  </div>
-  <div class="mouth"><span class="mouth__child">}</span></div>
+  <span class="nose">></span>
+  <span class="mouth">}</span>
 </main>
