--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -6,65 +6,55 @@ body {
   height: 100%;
   min-height: 100vh;
 }
-.about {
+.page__main {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.eye-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   text-align: center;
-  font-size: 18px;
-  color: white;
-}
-.projects {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  text-align: center;
-  font-size: 18px;
-  color: white;
-}
-.eye {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  text-align: center;
-  &__left-down {
-    font-size: 100px;
-    color: white;
-    margin-top: -30px;
-    -webkit-transform: rotate(90deg);
-    cursor: pointer;
-  }
-  &__right-down {
-    font-size: 100px;
-    color: white;
-    margin-top: -30px;
-    -webkit-transform: rotate(90deg);
-    cursor: pointer;
-  }
-  &__left-up {
-    font-size: 100px;
-    color: white;
-    margin-top: -30px;
-    -webkit-transform: rotate(90deg);
-    cursor: pointer;
-  }
-  &__right-up {
-    font-size: 100px;
-    color: white;
-    margin-top: -30px;
-    -webkit-transform: rotate(90deg);
-    cursor: pointer;
+  .eye {
+    position: relative;
+    &__down {
+      font-size: 100px;
+      color: white;
+      -webkit-transform: rotate(90deg);
+      cursor: pointer;
+    }
+    &__up {
+      position: absolute;
+      top: -60px;
+      // top: 260px;
+      // bottom: 560px;
+      // left: 0;
+      // right: -5px;
+      font-size: 100px;
+      color: white;
+      -webkit-transform: rotate(90deg);
+      cursor: pointer;
+    }
+    &__text {
+      position: absolute;
+      top: 15px;
+      right: 50px;
+      font-size: 18px;
+      color: white;
+      width: 68px;
+    }
+    &.js-collapsed {
+      .eye__up {
+        display: none;
+      }
+      .eye__text {
+        display: none;
+      }
+    }
   }
 }
-.js-collapsed .js-up {
-  display: none;
-}
-.js-collapsed .about {
-  display: none;
-}
-.js-collapsed .projects {
-  display: none;
-}
+
 .nose {
   display: flex;
   flex-direction: column;
@@ -77,22 +67,8 @@ body {
   -webkit-transform: rotate(90deg);
 }
 .mouth {
-  text-align: center;
   font-size: 100px;
   color: white;
   -webkit-transform: rotate(90deg);
-  &__child {
-    display: inline-block;
-  }
+  display: inline-block;
 }
-// .mouth {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   font-size: 100px;
-//   color: white;
-//   //margin-right: 10px;
-//   margin-top: 18px;
-//   -webkit-transform: rotate(90deg);
-// }
