--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -9,6 +9,12 @@ body {
 .page__main {
   text-align: center;
   padding-top: 100px;
+  @media all and (min-width: 768px) {
+    padding-top: 200px;
+  }
+  @media all and (min-width: 1200px) {
+    padding-top: 300px;
+  }
 }
 
 .eye-wrapper {
@@ -18,9 +24,6 @@ body {
   text-align: center;
   .eye {
     position: relative;
-    &__down:active {
-      transform: scale(1.5, 1.5);
-    }
     &__down {
       font-size: 100px;
       color: white;
@@ -28,6 +31,12 @@ body {
       cursor: pointer;
       transition-property: font-size;
       transition-duration: 1s;
+      @media all and (min-width: 768px) {
+        font-size: 130px;
+      }
+      @media all and (min-width: 1200px) {
+        font-size: 160px;
+      }
     }
     &__down:active {
       font-size: 80px;
@@ -40,6 +49,14 @@ body {
       color: white;
       -webkit-transform: rotate(90deg);
       cursor: pointer;
+      @media all and (min-width: 768px) {
+        top: -84px;
+        font-size: 130px;
+      }
+      @media all and (min-width: 1200px) {
+        top: -122px;
+        font-size: 160px;
+      }
     }
     &__text {
       position: absolute;
@@ -48,6 +65,14 @@ body {
       font-size: 18px;
       color: white;
       width: 68px;
+      @media all and (min-width: 768px) {
+        right: 8px;
+        font-size: 20px;
+      }
+      @media all and (min-width: 1200px) {
+        right: 32px;
+        font-size: 30px;
+      }
     }
     &.js-collapsed {
       .eye__up {
@@ -70,10 +95,24 @@ body {
   margin-right: 20px;
   margin-top: -18px;
   -webkit-transform: rotate(90deg);
+  @media all and (min-width: 768px) {
+    font-size: 50px;
+  }
+  @media all and (min-width: 1200px) {
+    font-size: 70px;
+  }
 }
 .mouth {
   font-size: 100px;
   color: white;
   -webkit-transform: rotate(90deg);
   display: inline-block;
+  @media all and (min-width: 768px) {
+    font-size: 150px;
+    margin-left: 7px;
+  }
+  @media all and (min-width: 1200px) {
+    font-size: 180px;
+    margin-left: 10px;
+  }
 }
