--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -14,15 +14,15 @@
   <nav class="header__nav">
     <ul>
       <li>
-        <a class="header__nav--home" href="./home.html" title="home">Home</a>
+        <a class="header__nav--home" href="./index.html" title="home">Home</a>
       </li>
       <li>
-        <a class="header__nav--about" href="./home.html" title="Sobre mí"
+        <a class="header__nav--about" href="./about.html" title="Sobre mí"
           >Sobre mí</a
         >
       </li>
       <li>
-        <a class="header__nav--projects" href="./home.html" title="Proyectos"
+        <a class="header__nav--projects" href="./projects.html" title="Proyectos"
           >Proyectos</a
         >
       </li>
