--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -2,12 +2,16 @@
   <div class="eye-wrapper">
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
-      <p class="eye__text">Sobre mí</p>
+      <a href="./about.html">
+        <p class="eye__text">Sobre mí</p>
+      </a>
       <p class="eye__down js-down">)</p>
     </section>
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
-      <p class="eye__text">Proyectos</p>
+      <a href="./projects.html">
+        <p class="eye__text">Proyectos</p>
+      </a>
       <p class="eye__down js-down">)</p>
     </section>
   </div>
