Fixed partial header

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -2,7 +2,6 @@
   <div class="header__wrapper">
     <h1 class="header__title">
       Natalia Migallón
-      <!-- <h2 class="header__title--sub">Programadora web front-end</h2> -->
     </h1>
 
     <div class="hamburger">
@@ -22,7 +21,10 @@
         >
       </li>
       <li>
-        <a class="header__nav--projects" href="./projects.html" title="Proyectos"
+        <a
+          class="header__nav--projects"
+          href="./projects.html"
+          title="Proyectos"
           >Proyectos</a
         >
       </li>
