--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,10 +1,22 @@
-.footer {
+.page-home .footer {
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100vw;
   padding: 1rem;
   color: white;
+  &__copy {
+    font-family: "Kiwi Maru", serif;
+  }
+}
+
+.page-about .footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  padding: 1rem;
+  color: black;
   &__copy {
     font-family: "Kiwi Maru", serif;
   }
