--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -16,14 +16,14 @@
     font-family: "Kiwi Maru", serif;
     font-weight: 300;
     font-size: 20px;
-    color: white;
+    color: black;
     text-align: center;
     margin-top: 26px;
     &--sub {
       font-family: "Open Sans", sans-serif;
       font-weight: 300;
       font-size: 12px;
-      color: white;
+      color: black;
       text-align: center;
     }
   }
@@ -48,11 +48,8 @@
   -ms-user-select: none;
   user-select: none;
 }
-// .hamburger.is-active {
-//   background-color: none;
-// }
 ._layer {
-  background: white;
+  background: black;
   margin-bottom: 4px;
   border-radius: 2px;
   width: 28px;
@@ -115,7 +112,7 @@
 .header__nav ul li a {
   font-family: "Kiwi Maru", serif;
   font-size: 15px;
-  color: white;
+  color: black;
   line-height: 20px; // determina espacio entre cada menú
   //height: 100px;
 }
