--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,7 +1,19 @@
 .page-about {
-  background-image: linear-gradient(rgb(253, 253, 253), rgb(21, 218, 208));
-  background-repeat: no-repeat;
+  // background-image: linear-gradient(rgb(253, 253, 253), rgb(21, 218, 208));
+  // background-repeat: no-repeat;
+  background-color: white;
   width: 100vw;
   height: 100%;
   min-height: 100vh;
+}
+.about {
+  &__title {
+    font-family: "Kiwi Maru", serif;
+    color: rgb(21, 218, 208);
+    padding: 155px 25px 25px 55px;
+  }
+  &__text {
+    font-family: "Kiwi Maru", serif;
+    padding: 10px 25px 25px 55px;
+  }
 }
