Add about page styles

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,9 +1,8 @@
 <header class="header">
   <div class="header__wrapper">
-    <h1 class="header__title">
+    <!-- <h1 class="header__title">
       Natalia Migallón
-    </h1>
-
+    </h1> -->
     <div class="hamburger">
       <div class="_layer -top"></div>
       <div class="_layer -mid"></div>
