--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,4 +1,5 @@
 <main class="page__main">
+  <h1 class="main__title">Natalia Migallón</h1>
   <div class="eye-wrapper">
     <section class="eye js-collapsed">
       <p class="eye__up">(</p>
