--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   padding: 1rem;
   color: white;
+  text-align: center;
   &__copy {
     font-family: "Kiwi Maru", serif;
   }
@@ -17,6 +18,7 @@
   width: 100vw;
   padding: 1rem;
   color: black;
+  text-align: center;
   &__copy {
     font-family: "Kiwi Maru", serif;
   }
