Add footer icons

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,3 +1,8 @@
 <footer class="footer">
+  <div>
+    <a href="" class=""><i class="icon__linkedin fab fa-linkedin"></i></a>
+    <a href="" class=""><i class="icon__github fab fa-github"></i></a>
+    <a href="" class=""><i class="icon__email fas fa-envelope"></i></a>
+  </div>
   <small class="footer__copy"> &copy; Natalia Migallón 2021</small>
 </footer>
