Add about footer

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,8 +1,11 @@
 <footer class="footer">
-  <div>
-    <a href="" class=""><i class="icon__linkedin fab fa-linkedin"></i></a>
-    <a href="" class=""><i class="icon__github fab fa-github"></i></a>
-    <a href="" class=""><i class="icon__email fas fa-envelope"></i></a>
-  </div>
+  <span class="footer__contact">Contacto</span>
+  <span class="footer__wrapper">
+    <a href="" class="icons icon__linkedin"><i class="fab fa-linkedin"></i></a>
+    <a href="" class="icons icon__github"
+      ><i class="icon__github fab fa-github"></i
+    ></a>
+    <a href="" class="icons icon__email"><i class="fas fa-envelope"></i></a>
+  </span>
   <small class="footer__copy"> &copy; Natalia Migallón 2021</small>
 </footer>
