--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,41 +1,75 @@
 .page-home .footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  padding: 1rem;
-  color: white;
+  background-color: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
+  padding: 20px;
+  color: white;
+  &__contact {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    color: white;
+  }
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    .icons {
+      font-size: 30px;
+      color: white;
+      padding: 10px 17px;
+    }
+  }
   &__copy {
     font-family: "Kiwi Maru", serif;
+    font-size: 13px;
+    color: white;
   }
 }
 .page-about .footer {
-  background-color: white;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  padding: 10px;
-  color: black;
+  background-color: rgb(21, 218, 208);
+  opacity: 0.68;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   text-align: center;
+  padding: 20px;
+  &__contact {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    color: white;
+  }
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    .icons {
+      font-size: 30px;
+      color: white;
+      padding: 10px 17px;
+    }
+  }
   &__copy {
     font-family: "Kiwi Maru", serif;
+    font-size: 13px;
+    color: white;
   }
 }
 .page-projects .footer {
   background-color: white;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100vw;
-  padding: 1rem;
-  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  //padding: 10px;
   text-align: center;
+  color: black;
   &__copy {
     font-family: "Kiwi Maru", serif;
   }
-  .icon__email {
-    color: black;
+  &__contact {
+    font-family: "Kiwi Maru", serif;
   }
 }
