--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -2,9 +2,9 @@
   // background-image: linear-gradient(rgb(253, 253, 253), rgb(21, 218, 208));
   // background-repeat: no-repeat;
   background-color: white;
-  width: 100vw;
-  height: 100%;
-  min-height: 100vh;
+  // width: 100vw;
+  // height: 100%;
+  // min-height: 100vh;
 }
 .projects {
   &__line {
@@ -22,6 +22,6 @@
   &__text {
     font-family: "Kiwi Maru", serif;
     color: grey;
-    padding: 0 25px 0 10px;
+    padding: 0 25px 72px 15px;
   }
 }
