Add about title and cv button

--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,7 +1,7 @@
 .page-home {
-  background-image: linear-gradient(rgb(21, 218, 158), rgb(240, 156, 77));
-  //background-image: linear-gradient(rgb(21, 218, 208), rgb(60, 66, 65) 60%);
-  //background-image: linear-gradient(rgb(21, 218, 208), rgb(226, 175, 128) 60%);
+  //background-image: linear-gradient(rgb(21, 218, 158), rgb(240, 156, 77));
+  //background-image: linear-gradient(rgb(21, 218, 208), rgb(212, 181, 206) 60%);
+  background-image: linear-gradient(rgb(21, 218, 208), rgb(226, 175, 128) 60%);
   background-repeat: no-repeat;
   width: 100vw;
   height: 100%;
