Change menu styles

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="contact" class="footer">
   <span class="footer__contact">Contacto</span>
   <span class="footer__wrapper">
     <a href="" class="icons icon__linkedin"><i class="fab fa-linkedin"></i></a>
