--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,8 +1,6 @@
 <header class="header">
   <div class="header__wrapper">
-    <!-- <h1 class="header__title">
-      Natalia Migallón
-    </h1> -->
+    <!-- <h1 class="header__title">Natalia Migallón</h1> -->
     <div class="hamburger">
       <div class="_layer -top"></div>
       <div class="_layer -mid"></div>
@@ -28,7 +26,7 @@
         >
       </li>
       <li>
-        <a class="header__nav--contact" href="./home.html" title="Contacto"
+        <a class="header__nav--contact" href="#contact" title="Contacto"
           >Contacto</a
         >
       </li>
