--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -49,27 +49,27 @@
   user-select: none;
 }
 ._layer {
-  background: black;
+  background: rgb(21, 218, 208);
   margin-bottom: 4px;
   border-radius: 2px;
-  width: 28px;
+  width: 38px;
   height: 2px;
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
   -webkit-transition: all 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
-  transition: all 0.25s cubic-bezier(0.05, 1.04, 0.72, 0.98);
+  transition: all 0.4s cubic-bezier(0.05, 1.04, 0.72, 0.98);
 }
-.hamburger:hover .-top {
-  -webkit-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  transform: translateY(-100%);
-}
-.hamburger:hover .-bottom {
-  -webkit-transform: translateY(100%);
-  -ms-transform: translateY(100%);
-  transform: translateY(100%);
-}
+// .hamburger:hover .-top {
+//   -webkit-transform: translateY(-100%);
+//   -ms-transform: translateY(-100%);
+//   transform: translateY(-100%);
+// }
+// .hamburger:hover .-bottom {
+//   -webkit-transform: translateY(100%);
+//   -ms-transform: translateY(100%);
+//   transform: translateY(100%);
+// }
 .hamburger.is-active .-top {
   -webkit-transform: translateY(290%) rotate(45deg) !important;
   -ms-transform: translateY(290%) rotate(45deg) !important;
@@ -85,25 +85,35 @@
 }
 .header__nav.is_active {
   transform: translate3d(0px, 0px, 0px);
+  //visibility: visible;
+  // transition-duration: 1s;
+  // -webkit-transition-duration: 1s;
 }
 .header__nav {
-  // background-image: linear-gradient(
-  //   45deg,
-  //   rgb(21, 218, 208),
-  //   rgb(226, 175, 128) 60%
+  // display: inline-block;
+  // background-image: radial-gradient(
+  //   ellipse,
+  //   rgb(255, 255, 255),
+  //   (transparent) 60%
   // );
-  //background-repeat: no-repeat;
+  // background-repeat: no-repeat;
   //bottom: 0;
   //height: 100%; //esconde por arriba
-  left: 13px;
   //overflow-y: scroll;
   position: fixed;
-  //position: relative;
   top: 60px;
+  left: 20px;
   transform: translate3d(0px, -180%, 0px); //esconde por arriba
-  transition: transform 0.35s cubic-bezier(0.05, 1.04, 0.72, 0.98) 0s;
-  width: 100%; //alinea a la izquierda
+  //transition: transform 0.35s cubic-bezier(0.05, 1.04, 0.72, 0.98) 0s;
+  //width: 100%; //alinea a la izquierda
   z-index: 1001;
+  // transition-duration: 1s;
+  // -webkit-transition-duration: 1s;
+  // &.is_active {
+  //   visibility: visible;
+  //   transition-duration: 1s;
+  //   -webkit-transition-duration: 1s;
+  // }
 }
 // .header__nav ul {
 //   margin-top: 20px;
@@ -111,8 +121,11 @@
 // }
 .header__nav ul li a {
   font-family: "Kiwi Maru", serif;
-  font-size: 15px;
-  color: black;
-  line-height: 20px; // determina espacio entre cada menú
-  //height: 100px;
+  font-size: 25px;
+  color: rgb(226, 175, 128);
+  line-height: 50px;
 }
+// .background-hamb {
+//   background-color: rgb(83, 78, 78);
+//   opacity: 0.67;
+// }
