--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,24 @@
 <footer id="contact" class="footer">
   <span class="footer__contact">Contacto</span>
   <span class="footer__wrapper">
-    <a href="" class="icons icon__linkedin"><i class="fab fa-linkedin"></i></a>
-    <a href="" class="icons icon__github"
+    <a
+      href="https://www.linkedin.com/in/nataliamigallon/"
+      target="_blank"
+      class="icons icon__linkedin"
+      ><i class="fab fa-linkedin"></i
+    ></a>
+    <a
+      href="https://github.com/NataliaMigallon"
+      target="_blank"
+      class="icons icon__github"
       ><i class="icon__github fab fa-github"></i
     ></a>
-    <a href="" class="icons icon__email"><i class="fas fa-envelope"></i></a>
+    <a
+      href="mailto:natmigallon@gmail.com"
+      target="_blank"
+      class="icons icon__email"
+      ><i class="fas fa-envelope"></i
+    ></a>
   </span>
   <small class="footer__copy"> &copy; Natalia Migallón 2021</small>
 </footer>
