--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -57,6 +57,7 @@
     color: rgb(83, 78, 78);
     padding: 0 0 3px 0;
     margin: 0 25px 18px 15px;
+    cursor: pointer;
   }
   &__cv2 {
     font-family: "Kiwi Maru", serif;
