--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -1,27 +1,63 @@
 .page-projects {
-  // background-image: linear-gradient(rgb(253, 253, 253), rgb(21, 218, 208));
+  // background-image: linear-gradient(rgb(226, 175, 128), rgb(83, 78, 78) 5%);
   // background-repeat: no-repeat;
-  background-color: white;
-  // width: 100vw;
-  // height: 100%;
-  // min-height: 100vh;
+  //background-color: rgb(83, 78, 78);
+  background-color: #fff;
+  background-image: linear-gradient(#eee 0.1em, transparent 0.1em);
+  background-size: 100% 1.2em;
 }
 .projects {
-  &__line {
-    border-left: thick solid rgb(21, 218, 208);
-    height: 168px;
-    margin-left: 40px;
-    //padding-bottom: 400px;
-  }
   &__title {
-    font-family: "Kiwi Maru", serif;
-    color: rgb(21, 218, 208);
-    text-transform: lowercase;
-    padding: 155px 25px 25px 55px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 250px 0 0 35px;
+    &--h1 {
+      //transform: matrix(1, 0, 0, 1, 0, 0);
+      font-family: "Kiwi Maru", serif;
+      font-size: 40px;
+      color: rgb(21, 218, 208);
+      color: rgb(226, 175, 128);
+      text-transform: lowercase;
+      padding: 0 5px 19px 0;
+    }
+    &--icon {
+      font-family: "Kiwi Maru", serif;
+      font-size: 40px;
+      font-weight: 800;
+      color: rgb(226, 175, 128);
+      -webkit-transform: rotate(90deg);
+      padding: 0 7px 7px 0;
+    }
+  }
+  &__line {
+    border-width: 3px;
+    border-style: solid;
+    border-right: 0;
+    border-image: linear-gradient(
+        to bottom,
+        rgb(21, 218, 208),
+        rgba(0, 0, 0, 0)
+      )
+      1 100%;
+    margin-left: 20px;
   }
   &__text {
     font-family: "Kiwi Maru", serif;
+    font-size: 20px;
     color: grey;
-    padding: 0 25px 72px 15px;
+    padding: 0 25px 42px 15px;
+  }
+  &__image {
+    width: 200px;
+    padding: 0 25px 42px 15px;
+  }
+  &__tools {
+    font-family: "Kiwi Maru", serif;
+    font-size: 20px;
+    font-weight: 300;
+    color: rgb(226, 175, 128);
+    padding: 0 25px 42px 15px;
   }
 }
