Adjust home footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding: 20px;
+  margin: 84px;
   color: white;
   &__contact {
     font-family: "Kiwi Maru", serif;
