--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -6,10 +6,22 @@
   text-align: center;
   margin: 84px;
   color: white;
+  @media all and (min-width: 768px) {
+    margin-top: 250px;
+  }
+  @media all and (min-width: 1200px) {
+    font-size: 70px;
+  }
   &__contact {
     font-family: "Kiwi Maru", serif;
     font-size: 20px;
     color: white;
+    @media all and (min-width: 768px) {
+      font-size: 30px;
+    }
+    @media all and (min-width: 1200px) {
+      font-size: 70px;
+    }
   }
   &__wrapper {
     display: flex;
@@ -19,12 +31,25 @@
       font-size: 30px;
       color: white;
       padding: 10px 17px;
+      @media all and (min-width: 768px) {
+        font-size: 45px;
+      }
+      @media all and (min-width: 1200px) {
+        font-size: 70px;
+      }
     }
   }
   &__copy {
     font-family: "Kiwi Maru", serif;
     font-size: 13px;
     color: white;
+    @media all and (min-width: 768px) {
+      font-size: 20px;
+      padding-bottom: 50px;
+    }
+    @media all and (min-width: 1200px) {
+      font-size: 70px;
+    }
   }
 }
 .page-about .footer {
