--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,6 +1,8 @@
 .page-about {
-  // background-color: rgb(83, 78, 78);
-  background-color: rgb(172, 172, 172);
+  background-color: rgb(253, 250, 250);
+  // background-color: #fff;
+  // background-image: linear-gradient(#eee 0.1em, transparent 0.1em);
+  // background-size: 100% 1.2em;
 }
 .about {
   &__photo {
@@ -39,21 +41,21 @@
     border-radius: 8px;
     border-style: none;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.32);
-    font-family: "Kiwi Maru", serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 17px;
     color: rgb(83, 78, 78);
     padding: 0 0 3px 0;
     margin: 0 25px 18px 15px;
     cursor: pointer;
   }
-  &__cv2 {
-    font-family: "Kiwi Maru", serif;
-    font-size: 22px;
-    font-weight: 300;
-    color: rgb(226, 175, 128);
-    text-decoration: underline 2px;
-    padding: 0 0 20px 15px;
-  }
+  // &__cv2 {
+  //   font-family: "Kiwi Maru", serif;
+  //   font-size: 22px;
+  //   font-weight: 300;
+  //   color: rgb(226, 175, 128);
+  //   text-decoration: underline 2px;
+  //   padding: 0 0 20px 15px;
+  // }
   &__line {
     border-width: 3px;
     border-style: solid;
@@ -67,7 +69,7 @@
     margin-left: 20px;
   }
   &__text {
-    font-family: "Kiwi Maru", serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
     color: grey;
     padding: 0 25px 42px 15px;
