Add button's link in page-projects

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -17,5 +17,5 @@
     </section>
   </div>
   <span class="nose">></span>
-  <span class="mouth">}</span>
+  <span class="mouth js-mouth">}</span>
 </main>
