--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -3,8 +3,10 @@
   // background-repeat: no-repeat;
   //background-color: rgb(83, 78, 78);
   background-color: #fff;
+  //background-image: linear-gradient(#f6f6f6 0.1em, transparent 0.1em);
   background-image: linear-gradient(#f6f6f6 0.1em, transparent 0.1em);
-  background-size: 100% 1.2em;
+  // background-size: 100% 1.2em;
+  background-size: 100% 25px;
 }
 .projects {
   &__title {
@@ -12,7 +14,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: 250px 0 0 35px;
+    padding: 30px 0 0 35px;
     &--h1 {
       //transform: matrix(1, 0, 0, 1, 0, 0);
       font-family: "Kiwi Maru", serif;
@@ -46,8 +48,10 @@
   &__text {
     font-family: "Open Sans", sans-serif;
     font-size: 18px;
+    line-height: 27px;
     color: grey;
     padding: 0 25px 10px 15px;
+    margin-top: 7px;
   }
   &__image {
     width: 200px;
@@ -65,6 +69,7 @@
     font-weight: 700;
     color: rgb(226, 175, 128);
     padding: 0 25px 0 15px;
+    margin-top: 5px;
   }
   &__btn-web {
     width: 50px;
