Add page-projects background-image

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -17,5 +17,8 @@
     </section>
   </div>
   <span class="nose">></span>
-  <span class="mouth js-mouth">}</span>
+  <section class="eye">
+    <p class="eye__text js-collapsed">jijiji</p>
+  <p class="mouth js-mouth">}</p>
+</section>
 </main>
