--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -9,12 +9,18 @@
   background-size: 100% 25px;
 }
 .projects {
+  &__photo {
+    width: 100vw;
+    margin-top: -48px;
+    opacity: 0.65;
+  }
   &__title {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    padding: 30px 0 0 35px;
+    //padding: 250px 0 0 35px;
+    padding: 0 0 0 35px;
     &--h1 {
       //transform: matrix(1, 0, 0, 1, 0, 0);
       font-family: "Kiwi Maru", serif;
