Fixed footer position

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -17,8 +17,8 @@
     </section>
   </div>
   <span class="nose">></span>
-  <section class="eye">
-    <p class="eye__text js-collapsed">jijiji</p>
-  <p class="mouth js-mouth">}</p>
-</section>
+  <section class="mouth-section js-collapsed">
+    <p class="mouth__text js-mouth__text">holi</p>
+    <p class="mouth js-mouth">}</p>
+  </section>
 </main>
