--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -8,25 +8,25 @@
     flex-direction: row;
     justify-content: center;
   }
-  &__title {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: "Kiwi Maru", serif;
-    font-weight: 300;
-    font-size: 20px;
-    color: black;
-    text-align: center;
-    margin-top: 26px;
-    &--sub {
-      font-family: "Open Sans", sans-serif;
-      font-weight: 300;
-      font-size: 12px;
-      color: black;
-      text-align: center;
-    }
-  }
+  // &__title {
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  //   align-items: center;
+  //   font-family: "Kiwi Maru", serif;
+  //   font-weight: 300;
+  //   font-size: 20px;
+  //   color: black;
+  //   text-align: center;
+  //   margin-top: 26px;
+  //   &--sub {
+  //     font-family: "Open Sans", sans-serif;
+  //     font-weight: 300;
+  //     font-size: 12px;
+  //     color: black;
+  //     text-align: center;
+  //   }
+  // }
 }
 .hamburger {
   position: fixed;
