--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -38,6 +38,7 @@
   .eye {
     position: relative;
     &__down {
+      //font-family: "Kiwi Maru", serif;
       font-size: 100px;
       color: white;
       -webkit-transform: rotate(90deg);
@@ -84,6 +85,7 @@
     &__up {
       position: absolute;
       top: -60px;
+      //font-family: "Kiwi Maru", serif;
       font-size: 100px;
       color: white;
       -webkit-transform: rotate(90deg);
@@ -190,10 +192,12 @@
 }
 
 .nose {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  font-family: "Kiwi Maru", serif;
+  display: inline-block;
   font-size: 30px;
   color: white;
   margin-right: 20px;
@@ -207,12 +211,15 @@
     font-size: 70px;
   }
 }
+
 .mouth {
+  //font-family: "Merryweather", sans-serif;
   font-size: 100px;
   color: white;
   -webkit-transform: rotate(90deg);
   -moz-transform: rotate(90deg);
   display: inline-block;
+  cursor: pointer;
   @media all and (min-width: 768px) {
     font-size: 200px;
     margin-left: 7px;
@@ -221,4 +228,23 @@
     font-size: 180px;
     margin-left: 10px;
   }
+  &__text {
+    font-family: "OpenSans", sans-serif;
+    font-size: 18px;
+    color: white;
+    &.js-mouth__text {
+      display: none;
+      font-family: "OpenSans", sans-serif;
+      font-size: 18px;
+      color: white;
+    }
+  }
 }
+
+// .js-collapsed2 {
+//   .mouth__text {
+//     // font-family: "OpenSans", sans-serif;
+//     color: white;
+//     display: none;
+//   }
+// }
