--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,19 +1,18 @@
 .page-about {
+  background-image: url("../images/nat-about.png");
   background-color: rgb(253, 250, 250);
-  // background-color: #fff;
-  // background-image: linear-gradient(#eee 0.1em, transparent 0.1em);
-  // background-size: 100% 1.2em;
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 .about {
-  &__photo {
-    width: 100vw;
-    margin-top: -48px;
-    opacity: 0.65;
-  }
+  margin-top: 418px;
+  border-width: 3px;
+  border-style: solid;
+  border-right: 0;
+  border-image: linear-gradient(to bottom, rgb(21, 218, 208), rgba(0, 0, 0, 0))
+    1 100%;
+  margin-left: 20px;
   &__title {
-    position: absolute;
-    z-index: 999;
-    margin-top: -132px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -59,21 +58,6 @@
   //   text-decoration: underline 2px;
   //   padding: 0 0 20px 15px;
   // }
-  &__line {
-    position: absolute;
-    z-index: 999;
-    margin-top: -60px;
-    border-width: 3px;
-    border-style: solid;
-    border-right: 0;
-    border-image: linear-gradient(
-        to bottom,
-        rgb(21, 218, 208),
-        rgba(0, 0, 0, 0)
-      )
-      1 100%;
-    margin-left: 20px;
-  }
   &__text {
     font-family: "Open Sans", sans-serif;
     font-size: 20px;
